--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
-    "next": "11.1.2",
+    "next": "^12.1.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
