--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "firebase": "^9.0.2",
     "firebase-admin": "^9.11.1",
-    "next": "^12.1.0",
+    "next": "^12.3.1",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
     "typescript": "4.4.2"
