--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 package-lock.json
+yarn.lock
 
 # testing
 /coverage
@@ -33,3 +34,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+pnpm-lock.yaml
