--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier -w"
   },
   "dependencies": {
-    "firebase": "^9.0.2",
+    "firebase": "^9.12.1",
     "firebase-admin": "^9.11.1",
     "next": "^12.3.1",
     "nookies": "^2.5.2",
@@ -23,6 +24,7 @@
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.3.6",
+    "prettier": "^2.7.1",
     "tailwindcss": "^2.2.15",
     "typescript": "4.4.2"
   }
